complete spoliage log api